--- a/public/assets/common/css/source/custom.css
+++ b/public/assets/common/css/source/custom.css
@@ -339,3 +339,70 @@ nav.top-submenu, .top-submenu {
 	left: auto;
 	margin: 0;
 }
+
+
+
+
+
+
+
+/*
+Max width before this PARTICULAR table gets nasty
+This query will take effect for any screen smaller than 760px
+and also iPads specifically.
+*/
+@media
+only screen and (max-width: 760px),
+(min-device-width: 768px) and (max-device-width: 1024px)  {
+
+	/* Force table to not be like tables anymore */
+	table.mobile, thead.mobile, tbody.mobile, th.mobile, td.mobile, tr.mobile {
+		display: block;
+	}
+
+	/* Hide table headers (but not display: none;, for accessibility) */
+	thead.mobile tr.mobile {
+		position: absolute;
+		top: -9999px;
+		left: -9999px;
+	}
+
+	tr.mobile { border-bottom: 1px solid #ccc; }
+
+	td.mobile {
+		/* Behave  like a "row" */
+		border: none;
+		border-bottom: 1px solid #eee;
+		position: relative;
+		padding-left: 50%;
+	}
+
+	td.mobile:before {
+		/* Now like a table header */
+		position: absolute;
+		/* Top/left values mimic padding */
+		/*top: 6px;*/
+		left: 6px;
+		width: 45%;
+		padding-right: 10px;
+		white-space: nowrap;
+	}
+
+	/*
+	Label the data
+	*/
+	td.mobile:nth-of-type(1):before { content: "Навык"; }
+	td.mobile:nth-of-type(2):before { content: "Кнопки"; }
+	td.mobile:nth-of-type(3):before { content: "Уровень"; }
+	td.mobile:nth-of-type(4):before { content: "Талант"; }
+	td.mobile:nth-of-type(5):before { content: "Учитель"; }
+	td.mobile:nth-of-type(6):before { content: "Удалить"; }
+}
+
+@media
+only screen and (min-width: 760px)  {
+	.plus-minus-block {
+		width: 150px;
+		float: right;
+	}
+}
