--- a/public/assets/common/css/source/helpers/base.default.css
+++ b/public/assets/common/css/source/helpers/base.default.css
@@ -920,7 +920,7 @@ nav.left-menu .left-menu-list-color-yellow:hover:before, nav.left-menu .left-men
     left: 0px;
     right: 0px;
     height: 3px;
-    background: #bbb8cb;
+    background: white;
     -webkit-transition: background .2s, -webkit-transform .2s;
     transition: background .2s, -webkit-transform .2s;
     -o-transition: background .2s, -o-transform .2s;
@@ -934,7 +934,7 @@ nav.left-menu .left-menu-list-color-yellow:hover:before, nav.left-menu .left-men
     left: 0;
     width: 100%;
     height: 3px;
-    background: #bbb8cb;
+    background: white;
     content: "";
 }
 
