--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,6 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/main.css')
+    link(rel='stylesheet', href='/stylesheet/main.css')
   body
     block content
