--- a/public/assets/common/css/source/apps/flaw.css
+++ b/public/assets/common/css/source/apps/flaw.css
@@ -1,7 +1,6 @@
 
 /* Flaw Manager */
 
-
 .panel-body {
     font-family: "Lato", sans-serif;
     margin: 25px 0 0 240px;
@@ -42,7 +41,7 @@
     margin-top: 35px;
 }
 
-media (min-width: 686px) {
+@media (max-width: 767px) {
     .panel-body {
     margin: 25px 0 0;
     }
